Using jQuery with the CDN at site.master

--- a/TheBeerHouse_MVC/TheBeerHouse/TheBeerHouse.csproj
+++ b/TheBeerHouse_MVC/TheBeerHouse/TheBeerHouse.csproj
@@ -488,6 +488,7 @@
     <Content Include="Content\scripts\manage-roles.js" />
     <Content Include="Content\scripts\manage-users.js" />
     <Content Include="Content\scripts\register.js" />
+    <Content Include="Content\styles\trendnet_nav_tabcontent_home.css" />
     <Content Include="Resources\Autumn Leaves.jpg" />
     <Content Include="Resources\Creek.jpg" />
     <Content Include="Resources\Desert Landscape.jpg" />
