--- a/TheBeerHouse_MVC/TheBeerHouse/Web.config
+++ b/TheBeerHouse_MVC/TheBeerHouse/Web.config
@@ -15,10 +15,7 @@
 		<section name="theBeerHouse" type="TheBeerHouse.Configuration.TheBeerHouseSection, TheBeerHouse"/>
 	</configSections>
 	<connectionStrings>
-    <!--<add name="TheBeerHouseConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\TheBeerHouse.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient"/>-->
-    <add name="TheBeerHouseConnectionString" connectionString="Data Source=CANOAS15;Initial Catalog=TheBeerHouse;Integrated Security=True" providerName="System.Data.SqlClient"/>
-
-<!--		<add name="TheBeerHouseConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\TheBeerHouse.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient"/>-->
+		<add name="TheBeerHouseConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\TheBeerHouse.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<theBeerHouse>
 		<articles pageSize="10"/>
