--- a/TheBeerHouse_MVC/TheBeerHouse/Web.config
+++ b/TheBeerHouse_MVC/TheBeerHouse/Web.config
@@ -16,7 +16,8 @@
 	</configSections>
 	<connectionStrings>
 		<add name="TheBeerHouseConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\TheBeerHouse.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient"/>
-	</connectionStrings>
+    <!--<add name="TheBeerHouseConnectionString" connectionString="Data Source=asp155.asphostserver.com,777;Initial Catalog=motta_db;uid=motta_user;pwd=beerhouse"  providerName="System.Data.SqlClient"/>-->
+  </connectionStrings>
 	<theBeerHouse>
 		<articles pageSize="10"/>
 		<polls pageSize="10" archiveIsPublic="true"/>
