--- a/TheBeerHouse_MVC/TheBeerHouse/Web.config
+++ b/TheBeerHouse_MVC/TheBeerHouse/Web.config
@@ -15,8 +15,8 @@
 		<section name="theBeerHouse" type="TheBeerHouse.Configuration.TheBeerHouseSection, TheBeerHouse"/>
 	</configSections>
 	<connectionStrings>
-		<add name="TheBeerHouseConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\TheBeerHouse.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient"/>
-    <!--<add name="TheBeerHouseConnectionString" connectionString="Data Source=asp155.asphostserver.com,777;Initial Catalog=motta_db;uid=motta_user;pwd=beerhouse"  providerName="System.Data.SqlClient"/>-->
+    <!--<add name="TheBeerHouseConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\TheBeerHouse.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient"/>-->
+    <add name="TheBeerHouseConnectionString" connectionString="Data Source=asp155.asphostserver.com,777;Initial Catalog=motta_db2;uid=motta_user2;pwd=beerhouse"  providerName="System.Data.SqlClient"/>
   </connectionStrings>
 	<theBeerHouse>
 		<articles pageSize="10"/>
@@ -77,10 +77,13 @@
 				</group>
 			</properties>
 		</profile>
+    <!--
 		<customErrors mode="RemoteOnly" defaultRedirect="user/register">
 			<error statusCode="403" redirect="user/forgotpassword"/>
 			<error statusCode="404" redirect="user/login"/>
 		</customErrors>
+-->
+    <customErrors mode="Off" />
 		<pages
 			 pageParserFilterType="System.Web.Mvc.ViewTypeParserFilter, System.Web.Mvc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"
 			 pageBaseType="System.Web.Mvc.ViewPage, System.Web.Mvc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"
