Moved to trendnetlab.com.br at discountasp.net

--- a/TheBeerHouse_MVC/TheBeerHouse/Web.config
+++ b/TheBeerHouse_MVC/TheBeerHouse/Web.config
@@ -16,7 +16,8 @@
 	</configSections>
 	<connectionStrings>
     <!--<add name="TheBeerHouseConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\TheBeerHouse.mdf;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient"/>-->
-    <add name="TheBeerHouseConnectionString" connectionString="Data Source=asp155.asphostserver.com,777;Initial Catalog=motta_db2;uid=motta_user2;pwd=beerhouse"  providerName="System.Data.SqlClient"/>
+    <!--<add name="TheBeerHouseConnectionString" connectionString="Data Source=asp155.asphostserver.com,777;Initial Catalog=motta_db2;uid=motta_user2;pwd=beerhouse"  providerName="System.Data.SqlClient"/>-->
+    <add name="TheBeerHouseConnectionString" connectionString="Data Source=sql2k803.discountasp.net;Initial Catalog=SQL2008_712318_db;uid=SQL2008_712318_db_user;pwd=tiago"  providerName="System.Data.SqlClient"/>
   </connectionStrings>
 	<theBeerHouse>
 		<articles pageSize="10"/>
